# supernova

./: .gitignore  build.gradle  settings.gradle
app/: AndroidManifest.xml  build.gradle  gradle.properties  local.properties
app/espeak-src/include/espeak-ng/: speak_lib.h
app/espeak-src/libespeak-ng/: espeak_api.c
app/jni/: CMakeLists.txt
app/jni/jni/: eSpeakService.c
app/res/anim/: icon_pulse.xml  icon_tap.xml
app/res/drawable/: ic_center_shape.xml  icon_foreground.xml
app/res/layout/: activity_vosk_demo.xml  main.xml
app/res/raw/: espeakdata_version
app/res/values/: arrays.xml  color.xml  donottranslate.xml  strings.xml
app/src/com/reecedunn/espeak/: CheckVoiceData.java  SpeechSynthesis.java  eSpeakActivity.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/reecedunn/espeak/: CheckVoiceData.java  SpeechSynthesis.java  TextProcessor.java  VoskActivity.java  eSpeakActivity.java
models/: build.gradle
